Update style.css to fix
I checked my website multiple times on my phone and it looked completely correct before I submitted it, but today after I was showing the results to a family member, I realized something got messed up (I don't know how), so I needed to fix this.

--- a/css/style.css
+++ b/css/style.css
@@ -267,6 +267,7 @@ nav ul a.active {
     border-top-left-radius: 10%;
     height: 70%;
     max-width: 100%;
+    width: 100%;
 }
 .small-card p {
     text-align: center;
